# ChangeLog for sys-cluster/heartbeat
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/heartbeat/ChangeLog,v 1.93 2011/04/12 17:34:05 jer Exp $

  12 Apr 2011; Jeroen Roovers <jer@gentoo.org> heartbeat-3.0.4-r1.ebuild:
  Marked ~hppa (bug #359893).

  12 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Drop obsolete description

*heartbeat-3.0.4-r1 (12 Apr 2011)

  12 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> -heartbeat-3.0.4.ebuild,
  +heartbeat-3.0.4-r1.ebuild:
  Drop useless dependency on sys-libs/openipmi. Thanks to jer for spotting.

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> heartbeat-1.2.5.ebuild,
  heartbeat-1.2.5-r1.ebuild, heartbeat-2.0.7-r2.ebuild, heartbeat-2.0.8.ebuild:
  ppc/ppc64 keywords dropped

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> heartbeat-3.0.4.ebuild:
  Add ewarn about migration guide

*heartbeat-3.0.4 (11 Feb 2011)

  11 Feb 2011; Ultrabug <ultrabug@gentoo.org> +files/3.0.4-docs.patch,
  +files/3.0.4-fix_configure.patch, +files/3.0.4-python_tests.patch,
  -files/3.0.3-docs.patch, -files/3.0.3-fix_configure.patch,
  -heartbeat-3.0.3-r2.ebuild, -files/3.0.3-python_tests.patch,
  +heartbeat-3.0.4.ebuild:
  Version bump, drop old unstable.

*heartbeat-3.0.3-r2 (06 Oct 2010)

  06 Oct 2010; Kacper Kowalik <xarthisius@gentoo.org>
  -heartbeat-3.0.3-r1.ebuild, +heartbeat-3.0.3-r2.ebuild, metadata.xml:
  Fix init script wrt 330035. Thanks to Denis Kaganovich
  <mahatma@bspu.unibel.by>. Correct dependencies, add use flag for ipmi.
  Thanks to Francisco Javier <ffelix@inode64.com>. Drop old.

*heartbeat-3.0.3-r1 (06 Oct 2010)

  06 Oct 2010; Kacper Kowalik <xarthisius@gentoo.org>
  -heartbeat-3.0.3.ebuild, +heartbeat-3.0.3-r1.ebuild:
  Don't hardcode uid/gid, use those provided by sys-cluster/cluster-glue.
  Drop old.

  29 Sep 2010; Dawid Węgliński <cla@gentoo.org> heartbeat-2.0.8.ebuild,
  +files/heartbeat-2.0.8-crm-assert.patch: