@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/heartbeat/Attic/heartbeat-2.0.8.ebuild,v 1.20 2011/03/22 09:03:44 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/heartbeat/Attic/heartbeat-2.0.8.ebuild,v 1.21 2011/04/16 18:59:10 armin76 Exp $
 
 inherit autotools flag-o-matic eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.linux-ha.org/download/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ia64 -mips -s390 sparc ~x86"
+KEYWORDS="amd64 -mips -s390 ~x86"
 IUSE="ldirectord doc snmp management"
 
 RDEPEND="
